/*
 * Copyright (c) 2020, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 *
 */
import org.apache.tools.ant.taskdefs.condition.Os
import org.gradle.process.ExecOperations
import org.gradle.jvm.toolchain.JavaLanguageVersion
import org.gradle.jvm.toolchain.JavaToolchainService
import javax.inject.Inject

abstract class BallerinaExecHelper {
    @Inject abstract ExecOperations getExecOperations()
}

abstract class PatchBallerinaScriptsTask extends DefaultTask {
    @Inject abstract JavaToolchainService getJavaToolchainService()

    @TaskAction
    void patch() {
        def launcher = javaToolchainService.launcherFor { spec ->
            spec.languageVersion.set(JavaLanguageVersion.of(25))
        }.get()
        def java25Home = launcher.executablePath.asFile.parentFile.parentFile.absolutePath

        def binDirs = [
            project.layout.buildDirectory.dir("jballerina-tools-${project.ballerinaLangVersion}/bin").get().asFile,
            new File("${project.rootDir}/target/ballerina-runtime/bin")
        ]
        binDirs.each { binDir ->
            if (binDir.exists()) {
                binDir.eachFile { file ->
                    file.setExecutable(true)
                    if (!file.name.endsWith('.bat') && !file.name.endsWith('.cmd')) {
                        def original = file.text
                        def lines = original.split('\n').toList()
                        lines = lines.findAll { !it.contains('--sun-misc-unsafe-memory-access=allow') }
                        def shebangIdx = lines.findIndexOf { it.startsWith('#!') }
                        if (shebangIdx >= 0) {
                            lines.add(shebangIdx + 1, "export JAVA_HOME='${java25Home}'")
                        }
                        def patched = lines.join('\n') + '\n'
                        if (patched != original) { file.text = patched }
                    }
                }
            }
        }
    }
}

buildscript {
    repositories {
        mavenLocal()
        maven {
            url = 'https://maven.pkg.github.com/ballerina-platform/*'
            credentials {
                username System.getenv("packageUser")
                password System.getenv("packagePAT")
            }
        }
    }
    dependencies {
        classpath "io.ballerina:plugin-gradle:${ballerinaGradlePluginVersion}"
    }
}

plugins {
    id 'io.ballerina.plugin'
}

description = 'Ballerina - Nats Ballerina Generator'

def packageName = "nats"
def packageOrg = "ballerinax"
def tomlVersion = stripBallerinaExtensionVersion("${project.version}")
def ballerinaTomlFilePlaceHolder = new File("${project.rootDir}/build-config/resources/Ballerina.toml")
def compilerPluginTomlFilePlaceHolder = new File("${project.rootDir}/build-config/resources/CompilerPlugin.toml")
def ballerinaTomlFile = new File("$project.projectDir/Ballerina.toml")
def compilerPluginTomlFile = new File("$project.projectDir/CompilerPlugin.toml")

def stripBallerinaExtensionVersion(String extVersion) {
    if (extVersion.matches(project.ext.timestampedVersionRegex)) {
        def splitVersion = extVersion.split('-');
        if (splitVersion.length > 3) {
            def strippedValues = splitVersion[0..-4]
            return strippedValues.join('-')
        } else {
            return extVersion
        }
    } else {
        return extVersion.replace("${project.ext.snapshotVersion}", "")
    }
}

ballerina {
    packageOrganization = packageOrg
    module = packageName
    langVersion = ballerinaLangVersion
}

configurations {
    externalJars
}

dependencies {
    externalJars(group: 'io.nats', name: 'jnats', version: "${natsVersion}") {
        transitive = false
    }
    externalJars(group: 'io.ballerina.stdlib', name: 'constraint-native', version: "${stdlibConstraintVersion}")
}

task updateTomlFiles {
    doLast {
        def natsClientVersion = project.natsVersion

        def newConfig = ballerinaTomlFilePlaceHolder.text.replace("@project.version@", project.version)
        def constraintVersion = stripBallerinaExtensionVersion("${project.stdlibConstraintVersion}")
        newConfig = newConfig.replace("@toml.version@", tomlVersion)
        newConfig = newConfig.replace("@nats.client.version@", natsClientVersion)
        newConfig = newConfig.replace("@constraint.native.version@", stdlibConstraintVersion)
        newConfig = newConfig.replace("@constraint.version@", constraintVersion)
        ballerinaTomlFile.text = newConfig

        def newPluginConfig = compilerPluginTomlFilePlaceHolder.text.replace("@project.version@", project.version)
        compilerPluginTomlFile.text = newPluginConfig
    }
}

task commitTomlFiles {
    def execHelper = project.objects.newInstance(BallerinaExecHelper)
    doLast {
        execHelper.execOperations.exec {
            ignoreExitValue true
            if (Os.isFamily(Os.FAMILY_WINDOWS)) {
                commandLine 'cmd', '/c', "git commit -m '[Automated] Update the native jar versions' Ballerina.toml CompilerPlugin.toml Dependencies.toml"
            } else {
                commandLine 'sh', '-c', "git commit -m '[Automated] Update the native jar versions' Ballerina.toml CompilerPlugin.toml Dependencies.toml"
            }
        }
    }
}

task startNatsServers() {
    doLast {
        if (!Os.isFamily(Os.FAMILY_WINDOWS)) {
            def execHelper = project.objects.newInstance(BallerinaExecHelper)
            def stdOut = new ByteArrayOutputStream()
            execHelper.execOperations.exec {
                commandLine 'sh', '-c', "docker ps --filter name=server_nats-tls_1"
                standardOutput = stdOut
            }
            if (!stdOut.toString().contains("server_nats-tls_1")) {
                println "Starting NATS Basic server."
                execHelper.execOperations.exec {
                    commandLine 'sh', '-c', "docker compose -f tests/server/compose.yaml up -d"
                    standardOutput = stdOut
                }
                println stdOut.toString()
                sleep(10 * 1000)
            } else {
                println "NATS Basic server is already started."
            }
        }
    }
}

task stopNatsServers() {
    doLast {
        if (!Os.isFamily(Os.FAMILY_WINDOWS)) {
            def execHelper = project.objects.newInstance(BallerinaExecHelper)
            def stdOut = new ByteArrayOutputStream()
            execHelper.execOperations.exec {
                commandLine 'sh', '-c', "docker ps --filter name=server_nats-tls_1"
                standardOutput = stdOut
            }
            if (stdOut.toString().contains("server_nats-tls_1")) {
                println "Stopping NATS server."
                execHelper.execOperations.exec {
                    commandLine 'sh', '-c', "docker compose -f tests/server/compose.yaml rm -svf"
                    standardOutput = stdOut
                }
                println stdOut.toString()
                sleep(5 * 1000)
            } else {
                println "NATS server is not started."
            }
        }
    }
}

task patchBallerinaScripts(type: PatchBallerinaScriptsTask) {
    dependsOn 'unpackJballerinaTools'
}

publishing {
    publications {
        maven(MavenPublication) {
            artifact source: createArtifactZip, extension: 'zip'
        }
    }

    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/ballerina-platform/module-${packageOrg}-${packageName}")
            credentials {
                username = System.getenv("publishUser")
                password = System.getenv("publishPAT")
            }
        }
    }
}


updateTomlFiles.dependsOn copyStdlibs

build.dependsOn "generatePomFileForMavenPublication"
build.dependsOn ":${packageName}-native:build"
build.dependsOn ":${packageName}-compiler-plugin:build"
test.dependsOn ":${packageName}-native:build"
test.dependsOn ":${packageName}-compiler-plugin:build"
build.dependsOn startNatsServers
test.dependsOn startNatsServers
build.finalizedBy stopNatsServers
test.finalizedBy stopNatsServers

build.dependsOn patchBallerinaScripts
test.dependsOn patchBallerinaScripts
copyStdlibs.dependsOn patchBallerinaScripts

publishToMavenLocal.dependsOn build
publish.dependsOn build
